--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <div id="iamStatusChart"></div>
     <div id="ec2StatusChart"></div>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.2/fetch.min.js"></script>
     <script type="text/javascript" src="./scripts/app.js"></script>
   </body>
 </html>
